@@ -620,3 +620,4 @@
 	- improved layout of comparison report
 	- removed option "ignore_exitcode_4" and always filter the mandatory device messages
 	- filter unprintable characters from input XMLs
+	- improved summary a bit
